<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coffee_toast_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/marginTop2"
        android:layout_weight="1"
        android:contentDescription="@string/coffee_logo"
        android:src="@drawable/background_coffee" />

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:hint="@string/name_hint"
            android:imeOptions="actionSend"
            android:inputType="textPersonName|textCapWords"
            android:selectAllOnFocus="false"
            android:textAlignment="center"
            android:textAppearance="@style/TextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop2"
            android:text="@string/quantityHeader"
            android:textAppearance="@style/TextView" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop3"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:onClick="decrement"
                android:text="-"
                android:theme="@style/MyButtonStyle" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:textAppearance="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="2"
                android:textAlignment="center" />

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:onClick="increment"
                android:text="+"
                android:theme="@style/MyButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop2"
            android:text="@string/toppingsHeader"
            android:textAppearance="@style/TextView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop3"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/whipped_cream_check_box"
                style="@style/MyCheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop3"
                android:paddingLeft="16dp"
                android:text="@string/Topping_1"
                android:textColor="#421c52" />

            <CheckBox
                android:id="@+id/chocolate_check_box"
                style="@style/MyCheckBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/Topping_2" />

        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop2"
            android:fontFamily="serif"
            android:onClick="submitOrder"
            android:text="@string/orderButtonText"
            android:textAllCaps="true"
            android:theme="@style/MyButtonStyle" />

    </LinearLayout>

</LinearLayout>
